--- a/css/style.css
+++ b/css/style.css
@@ -165,3 +165,15 @@ header {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+/*.daterangepicker .applyBtn {
+  color: #fff !important;
+  background-color: #007bff !important;
+  border-color: #007bff !important;
+}
+
+.daterangepicker .cancelBtn {
+  background-color: rgb(221, 221, 221) !important;
+  color: black !important;
+  border-color: rgb(221, 221, 221) !important;
+}*/
